Fix CompactHTMLToken's copy ctor to copy all fields https://bugs.webkit.org/show_bug.cgi?id=109076

Reviewed by Adam Barth.

This was introduced by me in r142004. Without this patch we fail all tests when using the background parser.

Also don't use getters in copy ctor.

No new tests because no new functionality.

* html/parser/CompactHTMLToken.cpp:
(WebCore::CompactHTMLToken::CompactHTMLToken):


Canonical link: https://commits.webkit.org/127282@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142029 268f45cc-cd09-0410-ab3c-d52691b4dbfc